# rust-graphql-diesel

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  diesel.toml  docker-compose.yaml
db/: Dockerfile  mysql.conf
db/initdb.d/: 1_ddl.sql
migrations/2021-07-02-142441_create_users/: up.sql
migrations/2021-07-04-133921_create_photos/: up.sql
src/: ddb.rs  domain.rs  graphql.rs  main.rs  schema.rs
src/ddb/: photo.rs  user.rs
src/domain/: photo.rs  user.rs
src/graphql/: errors.rs  me.rs  mutation.rs  other.rs  photo.rs  query.rs  schema.graphql
